--- a/AndroidCustomFontViews/app/src/main/AndroidManifest.xml
+++ b/AndroidCustomFontViews/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.MyTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="Custom Font Views" >
+            android:label="Custom Font Views">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
